--- a/packages/design-docs/stories/GettingStarted/React.mdx
+++ b/packages/design-docs/stories/GettingStarted/React.mdx
@@ -17,7 +17,9 @@ import "../../src/styles/Police.css";
 
 <p> Pour installer le design system dans votre projet **React**, exécutez la commande suivante : </p>
 
-<pre><code>npm install @design-system-rte/react</code></pre>
+```bash
+npm install @design-system-rte/react
+```
 
 <p> Le package <code>@design-system-rte/core</code> sera automatiquement installé comme dépendance pour accéder directement aux design tokens et interfaces **TypeScript**. </p>
 
@@ -36,13 +38,15 @@ import "../../src/styles/Police.css";
 
 <p> Importez les styles de base du design system dans votre point d'entrée principal (généralement <code>main.tsx</code> ou <code>index.tsx</code>). </p>
 
-<pre><code>{`import "@design-system-rte/react/dist/style.css";
+```typescript
+import "@design-system-rte/react/dist/style.css";
 
 createRoot(document.getElementById("root")!).render(
   <StrictMode>
     <App />
   </StrictMode>,
-);`}</code></pre>
+);
+```
 
 <h3 id="add-theme-mixin" style={{fontFamily:"Nunito"}}> Ajouter le mixin Branding/Theme </h3>
 
@@ -50,9 +54,11 @@ createRoot(document.getElementById("root")!).render(
 
 <p className="light-gray"> (Si vous n'avez pas de support scss, vous pouvez utiliser les fichiers .css dans <code>@design-system-rte/core/css/rte-themes.css</code> et les ajouter à votre fichier de styles principal). </p>
 
-<pre><code>{`@use "@design-system-rte/core/design-tokens/tokens/mixins" as *;
+```scss
+@use "@design-system-rte/core/design-tokens/tokens/mixins" as *;
 
-@include theme-selector('bleu_iceberg', 'light');`}</code></pre>
+@include theme-selector('bleu_iceberg', 'light');
+```
 
 <p> Les thèmes disponibles sont : </p>
 
@@ -68,15 +74,18 @@ createRoot(document.getElementById("root")!).render(
 
 <p> Ajoutez les attributs <code>data-theme</code> et <code>data-mode</code> sur l'élément <code>&lt;body&gt;</code> de votre application pour définir le contexte d'application des styles des composants. </p>
 
-<pre><code>{`<body data-theme="bleu_iceberg" data-mode="light">
+```html
+<body data-theme="bleu_iceberg" data-mode="light">
   <div id="root"></div>
-</body>`}</code></pre>
+</body>
+```
 
 <p> Ces attributs peuvent être modifiés dynamiquement pour changer de thème ou de mode (clair/sombre) à l'exécution. </p>
 
 <h2 id="quick-example" style={{border:"none", fontFamily:"Nunito"}}> Exemple d'utilisation </h2>
 
-<pre><code>{`import { Button } from "@design-system-rte/react";
+```typescript
+import { Button } from "@design-system-rte/react";
 
 function Example() {
   const handleClick = () => {
@@ -91,7 +100,8 @@ function Example() {
       onClick={handleClick}
     />
   );
-}`}</code></pre>
+}
+```
 
 <p> Vous pouvez lire le reste de la documentation du composant **Button** sur le <a href="https://opensource.rte-france.com/design-system-rte/?path=/docs/react_button--docs">Storybook du composant</a>.</p>
 
@@ -113,11 +123,13 @@ function Example() {
 
 <p> Pour changer de thème, modifiez les attributs <code>data-theme</code> et <code>data-mode</code> sur l'élément qui héberge le thème.</p>
 
-<pre><code>{`<!-- Thème bleu_iceberg en mode clair -->
+```html
+<!-- Thème bleu_iceberg en mode clair -->
 <body data-theme="bleu_iceberg" data-mode="light">
 
 <!-- Thème vert_foret en mode sombre -->
-<body data-theme="vert_foret" data-mode="dark">`}</code></pre>
+<body data-theme="vert_foret" data-mode="dark">
+```
 
 <p> Vous pouvez également changer ces attributs dynamiquement pour changer le thème ou mode pendant l'exécution de l'application. </p>
 
