chore(docs): refacto architecture for Introduction page

--- a/packages/design-docs/stories/Introduction/Introduction.mdx
+++ b/packages/design-docs/stories/Introduction/Introduction.mdx
@@ -1,8 +1,8 @@
 import { Meta } from "@storybook/blocks";
 import React from "react";
-import Header from "../src/components/Header";
-import MainContent from "../src/components/MainContent";
-import Footer from "../src/components/Footer";
+import Header from "./components/Header";
+import MainContent from "./components/MainContent";
+import Footer from "./components/Footer";
 
 <Meta title="Design system/Introduction" />
 
