feat(docs): create subcomponent for pages

--- a/packages/design-docs/stories/Accessibility.mdx
+++ b/packages/design-docs/stories/Accessibility.mdx
@@ -1,6 +1,6 @@
 import {Meta} from "@storybook/blocks"
 
-import Heading from "../src/components/Heading";
+import Heading from "../src/components/Heading/Heading";
 
 import "../src/styles/Police.css";
 
